--- a/main/Sample/Northwind.Test/Northwind.Test.csproj
+++ b/main/Sample/Northwind.Test/Northwind.Test.csproj
@@ -67,12 +67,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Fake\NorthwindFakeContext.cs" />
-    <Compile Include="Fake\NorthwindFakeDbSets.cs" />
+    <Compile Include="UnitTests\Fake\NorthwindFakeContext.cs" />
+    <Compile Include="UnitTests\Fake\NorthwindFakeDbSets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\ProductRepositoryTest.cs" />
-    <Compile Include="Service\CustomerServiceTest.cs" />
-    <Compile Include="StoredProcedure\UnitTest1.cs" />
+    <Compile Include="UnitTests\Repository\ProductRepositoryTest.cs" />
+    <Compile Include="UnitTests\Service\CustomerServiceTest.cs" />
+    <Compile Include="UnitTests\StoredProcedure\UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Northwind.Entities\Northwind.Entities.csproj">
@@ -95,6 +95,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="IntegrationTests\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
