--- a/main/Sample/Northwind.Test/App.config
+++ b/main/Sample/Northwind.Test/App.config
@@ -4,7 +4,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="NorthwindContext" connectionString="Data Source=.; Initial Catalog=NorthwindTest; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="MasterDbConnection" connectionString="Data Source=.; Initial Catalog=master       ; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="NorthwindContext"   connectionString="Data Source=.; Initial Catalog=NorthwindTest; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
